// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab canSwipe 1`] = `
<div
  class="za-tabs"
>
  <div
    class="za-tabs__header"
  >
    <ul
      role="tablist"
    >
      <li
        class="za-tabs__tab"
        role="tab"
      >
        选项卡1
      </li>
      <li
        class="za-tabs__tab"
        role="tab"
      >
        选项卡2
      </li>
    </ul>
    <div
      class="za-tabs__line"
      style="width:50%;left:0%"
    />
  </div>
  <div
    class="za-tabs__body"
  >
    <div
      class="za-carousel za-carousel--horizontal"
    >
      <div
        class="za-carousel__items"
      >
        <div
          class="za-carousel__item"
        >
          <div>
            试试点我左滑
          </div>
        </div>
        <div
          class="za-carousel__item"
        >
          <div>
            试试点我右滑
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tab lineWidth is auto 1`] = `
<div
  className="za-tabs"
>
  <div
    className="za-tabs__header"
  >
    <ul
      role="tablist"
    >
      <li
        className="za-tabs__tab"
        key="0/.0"
        onClick={[Function]}
        role="tab"
      >
        选项卡1
      </li>
      <li
        className="za-tabs__tab"
        key="1/.1"
        onClick={[Function]}
        role="tab"
      >
        选项卡2
      </li>
    </ul>
    <div
      className="za-tabs__line"
      style={
        Object {
          "backgroundColor": "transparent",
          "left": "0%",
          "width": "50%",
        }
      }
    >
      <span
        className="za-tabs__line__inner"
        style={
          Object {
            "width": "auto",
          }
        }
      />
    </div>
  </div>
  <div
    className="za-tabs__body"
  >
    <TabPanel
      key=".0"
      prefixCls="za-tabs"
      selected={true}
      title="选项卡1"
    >
      <div>
        试试点我左滑
      </div>
    </TabPanel>
    <TabPanel
      key=".1"
      prefixCls="za-tabs"
      selected={false}
      title="选项卡2"
    >
      <div>
        试试点我右滑
      </div>
    </TabPanel>
  </div>
</div>
`;

exports[`Tab lineWidth is auto 2`] = `
<div
  className="za-tabs"
>
  <div
    className="za-tabs__header"
  >
    <ul
      role="tablist"
    >
      <li
        className="za-tabs__tab"
        key="0/.0"
        onClick={[Function]}
        role="tab"
      >
        选项卡1
      </li>
      <li
        className="za-tabs__tab"
        key="1/.1"
        onClick={[Function]}
        role="tab"
      >
        选项卡2
      </li>
    </ul>
    <div
      className="za-tabs__line"
      style={
        Object {
          "backgroundColor": "transparent",
          "left": "0%",
          "width": "50%",
        }
      }
    >
      <span
        className="za-tabs__line__inner"
        style={
          Object {
            "width": 30,
          }
        }
      />
    </div>
  </div>
  <div
    className="za-tabs__body"
  >
    <TabPanel
      key=".0"
      prefixCls="za-tabs"
      selected={true}
      title="选项卡1"
    >
      <div>
        试试点我左滑
      </div>
    </TabPanel>
    <TabPanel
      key=".1"
      prefixCls="za-tabs"
      selected={false}
      title="选项卡2"
    >
      <div>
        试试点我右滑
      </div>
    </TabPanel>
  </div>
</div>
`;

exports[`Tab renders correctly 1`] = `
<div
  class="za-tabs"
>
  <div
    class="za-tabs__header"
  >
    <ul
      role="tablist"
    >
      <li
        class="za-tabs__tab"
        role="tab"
      >
        选项卡1
      </li>
      <li
        class="za-tabs__tab"
        role="tab"
      >
        选项卡2
      </li>
    </ul>
    <div
      class="za-tabs__line"
      style="width:50%;left:0%"
    />
  </div>
  <div
    class="za-tabs__body"
  >
    <div
      class="za-tabs__panel za-tabs__panel--active"
      role="tabpanel"
    >
      <div>
        试试点我左滑
      </div>
    </div>
    <div
      class="za-tabs__panel"
      role="tabpanel"
    >
      <div>
        试试点我右滑
      </div>
    </div>
  </div>
</div>
`;
